Fix cases where setValueCurveAtTime was not throwing errors

Catch more cases where we should throw errors if a new
setValueCurveAtTime overlaps an existing setValueCurveAtTime event.

Add some additional tests for more coverage.  Also, some of the
existing tests were using incorrect expected error types so fix them.

Remove test expectations file since we pass now.

Bug: 879767
Test: the-audioparam-interface/audioparam-setValueCurve-exceptions.html
Change-Id: I14a7a7c9ab36955b7e084ca9148495860b661111
Reviewed-on: https://chromium-review.googlesource.com/1205719
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589059}
Former-commit-id: 9c5722acdb2d084cf210c9ba2940f8353943c136